--- a/src/xctrls/TP.xctrls.table/TP.xctrls.table.css
+++ b/src/xctrls/TP.xctrls.table/TP.xctrls.table.css
@@ -12,7 +12,7 @@ xctrls|table {
 
     display: inline-block;
 
-    overflow-y: auto;
+    overflow-y: hidden;
 
     user-select: none;
 }
